<resources>
    <string name="app_name">KIROKUN (キロクン)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="loading" translatable="false">Laddar värde</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="server_fail_info">No contact with server</string>
    <string name="mail_subject">Concerning the KIROKUN</string>
    <string name="mail_reserch_body">-Here you can write to the researchers for KIROKUN-</string>
    <string name="mail_tech_body">-Here you can write to the developers for KIROKUN-</string>
    <string name="reserchText1">"If you are experiencing any technical issues or have any questions/comments about the content of the survey, please email; ltajapan2024@gmail.com "</string>

    <string name="log_out">Log out</string>
    <string name="doYouWantToLogOut">Do you want to log out?\n%1$s</string>
    <string name="cancel">Cancel</string>
    <string name="langTrackApp" translatable="false">KIROKUN (キロクン)</string>
    <string name="humanityLab">KIROKUN</string>
    <string name="menu">Menu</string>
    <string name="loggedInAs">Logged in as</string>
    <string name="logOut">Log out</string>
    <string name="contakt">Contact</string>
    <string name="about">About</string>
    <string name="SurveyToAnswer">Survey to answer</string>
    <string name="timeLeftMinute">Time left: %1d minutes</string>
    <string name="timeLeftMinutes">Time left: %2d minutes</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="timeLeftHourAndOneMinute">Time left: %1$2d %2$s and %3$1d minute</string>
    <string name="timeLeftHourAndMinute">Time left: %1$2d %2$s and %3$1d minutes</string>
    <string name="timeLeftHourAndMinutes">Time left: %1$2d %2$s and %3$2d minutes</string>
    <string name="surveyToAnswer">Survey to answer</string>
    <string name="timeLeftOneMinute">Time left: %1d minute</string>
    <string name="answered">Answered</string>
    <string name="noDate">noDate</string>
    <string name="unanswered">Unanswered</string>
    <string name="dateFormat">yyyy-MM-dd HH:mm</string>
    <string name="answeredSurvey">Answered survey</string>
    <string name="unansweredSurvey">Unanswered survey</string>
    <string name="published">Published:</string>
    <string name="expired">Expired:</string>
    <string name="numberOfQuestions">Number of questions:</string>
    <string name="numberEnding">%d</string>
    <string name="noTitle">noTitle</string>
    <string name="humanitiesLab">Humanities Lab</string>
    <string name="oneHour">%d hour</string>
    <string name="manyHours">%d hours</string>
    <string name="numberOfMinutes">%d minutes</string>
    <string name="numberOfHourAndMinutes">%1$d hour and %2$d minutes</string>
    <string name="numberOfHoursAndMinutes">%1$d hours and %2$d minutes</string>
    <string name="noDuration">0 hours and 0 minutes</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="pickFromList">"    Select a word from the list"</string>
    <string name="submit">Submit</string>
    <string name="start">Start</string>
    <string name="clickOutsideTextTo">Click outside the text box to close the keyboard</string>
    <string name="openEndedHint">Enter text</string>
    <string name="minutes">Minutes</string>
    <string name="doYouWantToCloseTheSurvey">Do you want to close the survey and return to the start page?\nThe answers will not be saved.</string>
    <string name="closeTheSurvey">Close survey</string>
    <string name="langTrackAppInfo1">KIROKUN is an app for participating in research through daily records and surveys.\n\nLog in with the username and password assigned to you</string>
    <string name="info">Info</string>
    <string name="enterCredentials">Please enter your username and password</string>
    <string name="authenticationFailed">Authentication failed.</string>
    <string name="enterPassword">Enter password</string>
    <string name="enterUserName">Enter username</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="logIn">Log in</string>
    <string name="menuProjectAbout">We developed the KIROKUN app to study when, where, and how often language learners are in contact with different foreign languages in everyday life. This crucial to improving our understanding of the challenges of language learning outside of classrooms.</string>
    <string name="links">Links</string>
    <string name="lund_university">Lund University</string>
    <string name="marianneInfo">Zoe Handley, Senior Lecturer, Education Department, University of York</string>
    <string name="jonasInfo">Clare Wright, Associate Professor in Linguistics and Language</string>
    <string name="team">Team</string>
    <string name="henrietteInfo">Philip Harrison, Research Software Engineer Team Lead, University of York RSE Team</string>
    <string name="josefInfo">Stuart Lacy, Research Software Engineer, University of York RSE Team</string>
    <string name="stephanInfo">Viktor Czyzewski, University of York RSE Team</string>
    <string name="instructions">Instructions</string>
    <string name="instructionsText">You will be asked to complete brief surveys in this app 1-3 times per day. You will receive a push notification whenever there is a new survey. Make sure you keep your phone nearby and the notification sounds turned on!   It\'s important that you answer each survey as soon as possible. If you don\'t answer a survey, it will automatically expire after 60 minutes.</string>
    <string name="dataProcessingInfo">In addition to your survey responses, the app will automatically record the date and time when you opened each survey and when you submitted your answers. The app will not record any other data, e.g. about your location.  \n\nYour data will be compiled and analyzed by the project team. No one else will have access to your answers. When we report the results of the project, all information will be anonymised.</string>
    <string name="dataProcessingHeader">Data processing</string>
    <string name="founding">Developed by \nUniversity of York RSE Team</string>
    <string name="founder_image_name">founding_en</string>
    <string name="founding_link_address">https://maw.wallenberg.org/en</string>
    <string name="click_here">click here</string>
    <string name="youHaveAnswered">"You have answered "</string>
    <string name="ofYour">" of your "</string>
    <string name="surveys">" assigned surveys."</string>
    <string name="minute">minute</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="timeLeft">Time left:</string>
    <string name="and">and</string>
    <string name="survey_expired">Survey expired</string>
    <string name="youHaveAnsweredWithFormate">You have answered %1$s of your %2$s assigned surveys.</string>
    <string name="empty_list_info">"There's nothing here... "</string>
    <string name="version_label">Version: %1$s</string>
    <string name="status_label">Status</string>
    <string name="survey_display_error">This survey could not be displayed. Please try again later.</string>
    <string name="contact_description">For technical issues or questions about the survey, please contact:</string>
    <string name="error_title">Error</string>
    <string name="not_available">N/A</string>
    <string name="account_connection_failed">Could not verify your project access. Check your connection and try again.</string>
    <string name="account_retry_connection">Retry connection</string>
    <string name="account_username_sign_in">Sign in with username</string>
    <string name="notification_channel_surveys">Survey notifications</string>
<string name="notification_survey_unavailable">This survey is currently unavailable. Please check the survey list.</string>
<string name="unanswered_badge_channel">Unanswered surveys</string>
<string name="unanswered_badge_title">Unanswered surveys: %1$d</string>
<string name="unanswered_badge_body">Open KIROKUN to answer.</string>
</resources>
