<?xml version='1.0' encoding='utf-8'?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/openLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/openEndedTextNextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="8dp"
            android:padding="10dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/openEndedTextBackButton" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/openEndedTextBackButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="8dp"
            android:padding="10dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/previous"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/openEndedTextNextButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />
        <androidx.core.widget.NestedScrollView
            android:id="@+id/questionScroll"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/openEndedTextNextButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingBottom="20dp">
                <ImageView
                    android:id="@+id/openIcon"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:srcCompat="@drawable/kirokun_question_open"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="16dp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/openTextTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textAlignment="center"
                        android:textColor="@color/lta_text"
                        android:textSize="17sp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="match_parent"
                        android:maxLines="2"
                        android:layout_height="wrap_content"
                        android:text="@string/clickOutsideTextTo"
                        android:textSize="12sp"
                        android:layout_marginTop="10dp" />
                    <EditText
                        android:id="@+id/openEditText"
                        android:autofillHints="Ange text"
                        android:hint="@string/openEndedHint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:minLines="2"
                        android:maxLines="7"
                        android:background="@drawable/blue_rounded_corner"
                        android:textColor="@color/lta_text"
                        android:textSize="18sp"
                        android:padding="5dp"
                        android:layout_marginTop="2dp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
