<?xml version='1.0' encoding='utf-8'?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="match_parent">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/fillInTheBlankNextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="8dp"
            android:enabled="false"
            android:padding="10dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/fillInTheBlankBackButton" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/fillInTheBlankBackButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="8dp"
            android:padding="10dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/previous"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/fillInTheBlankNextButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />
        <androidx.core.widget.NestedScrollView
            android:id="@+id/questionScroll"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/fillInTheBlankNextButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingBottom="20dp">
                <ImageView
                    android:id="@+id/openIcon"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:srcCompat="@drawable/kirokun_question_blank"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="16dp" />
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">
                    <TextView
                        android:id="@+id/fillInTheBlankTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="25dp"
                        android:layout_marginBottom="40dp"
                        android:maxLines="10"
                        android:text=""
                        android:textAlignment="center"
                        android:textColor="@color/lta_text"
                        android:textSize="17sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/fillInTheBlankSpinnerTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_marginEnd="40dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/pickFromList" />
                    <Spinner
                        android:id="@+id/choice_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_marginEnd="40dp"
                        android:layout_marginBottom="40dp"
                        android:background="@color/lta_light_grey"
                        app:layout_constraintBottom_toTopOf="@+id/fillInTheBlankNextButton"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
