<?xml version='1.0' encoding='utf-8'?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sliderLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screen.surveyContainer.sliderScale.SliderScaleFragment">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/sliderScaleNextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="8dp"
            android:padding="10dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/sliderScaleBackButton" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/sliderScaleBackButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="8dp"
            android:padding="10dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/previous"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/sliderScaleNextButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />
        <androidx.core.widget.NestedScrollView
            android:id="@+id/questionScroll"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/sliderScaleNextButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingBottom="20dp">
                <ImageView
                    android:id="@+id/sliderIcon"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:srcCompat="@drawable/kirokun_question_slider"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="16dp" />
                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/sliderScaleTextTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="25dp"
                        android:maxLines="20"
                        android:minLines="1"
                        android:padding="5dp"
                        android:text="Beskrivning"
                        android:textAlignment="center"
                        android:textColor="@color/lta_text"
                        android:textSize="17sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/sliderScaleValueTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="30dp"
                        android:maxLines="1"
                        android:text="50"
                        android:textAlignment="center"
                        android:textColor="@color/lta_text"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="100dp"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/sliderScaleMin"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="20dp"
                            android:layout_weight="1"
                            android:text=""
                            android:textSize="12sp"
                            android:textStyle="italic" />
                        <TextView
                            android:id="@+id/sliderScaleMax"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_weight="1"
                            android:text=""
                            android:textAlignment="textEnd"
                            android:textSize="12sp"
                            android:textStyle="italic" />
                    </LinearLayout>
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:gravity="fill_horizontal"
                        android:orientation="horizontal">
                        <SeekBar
                            android:id="@+id/sliderSeekBar"
                            android:layout_width="0dp"
                            android:layout_height="48dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/sliderScaleCheckboxNA"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                        <CheckBox
                            android:id="@+id/sliderScaleCheckboxNA"
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:layout_marginEnd="10dp"
                            android:tag="5"
                            android:text="@string/not_available"
                            android:textColor="@color/lta_grey"
                            android:textColorLink="@color/lta_blue"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/sliderSeekBar"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
